Fix api when onload and fix jokes overlapping when jokes are too long

--- a/apps/scss/layout/_card.scss
+++ b/apps/scss/layout/_card.scss
@@ -3,6 +3,7 @@
 .card {
   max-width: 700px;
   display: grid;
+  grid-template-columns: 1fr;
   justify-items: center;
   gap: 2rem;
   padding: 2rem;
@@ -18,7 +19,7 @@
     text-align: center;
     width: 80%;
     transition: opacity 0.5s ease;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   button {
@@ -36,10 +37,12 @@
   }
 
   @include u.breakpoints(medium) {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     max-width: 350px;
 
     button,
     p {
+      width: 100%;
       font-size: 1rem;
     }
   }
